deployzip/sas-bases/overlays/network/networking.k8s.io/v1/ingress/components/sas-data-mining-results/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /dataMiningResults/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataMiningResults/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-results
    sas.com/admin: namespace
  name: sas-data-mining-results
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-results
            port:
              number: 80
        path: /dataMiningResults(/|$)(.*)
        pathType: Prefix
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-results
            port:
              number: 80
        path: /dataMiningResults(/|$)(.*)
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /dataMiningWarehouse/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataMiningWarehouse/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-warehouse
    sas.com/admin: namespace
  name: sas-data-mining-warehouse
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-warehouse
            port:
              number: 80
        path: /dataMiningWarehouse(/|$)(.*)
        pathType: Prefix
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-warehouse
            port:
              number: 80
        path: /dataMiningWarehouse(/|$)(.*)
        pathType: Prefix
